[package]
name = "specul"
version = "0.1.0"
edition = "2021"
authors = ["Sefton de Pledge"]
description = "A simple, asynchronous RCON client for Rust."
license = "MIT"
repository = "https://github.com/seftontycho/specul.git"
homepage = "https://github.com/seftontycho/specul.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["io-util"] }
err-derive = "0.3.1"
